Mon Aug 20 08:36:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-monotonic-timer.html:
          New document describing the ACE monotonic timer support for conditions,
          message queues and tasks

        * docs/index.html:
          Added new page, removed link to site that doesn't work anymore

Mon Aug 20 08:21:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_types.h:
          Define CLOCK_MONOTONIC to 1 when it is not defined, should fix
          hpux problems

Mon Aug 20 07:57:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.h:
        * ace/Condition_Attributes.inl:
          Added accessor for attributes and removed friend declaration,
          that hopefully fixes the Sun Studio 11 problems

        * ace/Condition_Recursive_Thread_Mutex.cpp:
        * ace/Condition_T.cpp:
        * ace/Condition_Thread_Mutex.cpp:
          Use accessor of the attributes.

Sat Aug 18 19:25:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Null_Condition.h:
          Fix for single threaded builds

Sat Aug 18 19:23:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.h:
          Added forward declaration, maybe this fixes solaris 9

Fri Aug 17 18:05:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Attempt to fix clang warning

Fri Aug 17 13:38:05 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/Condition_Recursive_Thread_Mutex.h:
        * ace/Condition_Thread_Mutex.h:
        * ace/Null_Condition.h:
        * ace/Synch_Traits.h:
          Changes to attempt to fix Solaris9 SUNStudio11 problems.

Fri Aug 17 12:28:32 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-hpux-11.00.h:
        * ace/config-linux.h:
          Fixes (hopefully) for non-compliant POSIX platforms.
